hphp/hack/test/typecheck/function_pointer/reified_inst_meth.php.exp
File "reified_inst_meth.php", line 9, characters 3-22:
Invalid function reference. This function requires reified generics. Prefer using a lambda instead. (Typing[4381])
