hphp/hack/test/typecheck/function_pointer/reified_inst_meth.php
<?hh

final class MyClass {
  public function foo<reify T>(): void {}
}

function test(): void {
  $x = new MyClass();
  inst_meth($x, 'foo');
}
